# durable

./: .gitignore  AGENT_PROMPT.md  Cargo.toml  README.md  VALIDATION_RUBRIC.md  apm.lock.yaml  apm.yml  bincast.toml  binstall.toml  engine.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
docs/: APM_REFERENCE.md  CLI_SPEC.md  CLI_SPEC_V2.md  DISTRIBUTION.md  DISTRIBUTION_RESEARCH.md  MULTIPLEXED_RUNTIME.md  PROTOCOL.md  TUTORIAL.md
docs/integrations/: ARCHITECTURE.md  COMPATIBILITY.md
examples/: crash_recovery.rs  echo_agent.rs  tool_agent.rs
homebrew/: delite-core.rb  durable-runtime.rb
scoop/: durable-runtime.json
sdks/python/: Makefile  README.md  pyproject.toml
sdks/python/durable/: __init__.py  _protocol.py  _runtime.py  agent.py  budget.py  contract.py  errors.py  lifecycle.py  response.py  runtime.py  testing.py  tool.py
sdks/python/durable/cli/: __init__.py  main.py
sdks/python/durable/integrations/: __init__.py  _base.py  adk.py  crewai.py  langchain.py
sdks/python/durable/providers/: __init__.py  _http.py  anthropic.py  openai.py
sdks/python/durable_sdk/: __init__.py  llm_adapter.py  protocol.py  tool_server.py  types.py
sdks/python/examples/: 01_quickstart.py  02_crash_recovery.py  03_human_in_the_loop.py  04_budget_guardrails.py  05_contract_enforcement.py  06_cli_observability.py  07_fastapi_embedded.py  08_side_by_side.py  README.md  echo_tool.py
sdks/python/examples/integrations/: adk_persistent_assistant.py  crewai_resilient_research.py  durable_native_order.py  langchain_crash_recovery.py
sdks/python/scripts/: bundle_binary.py
sdks/python/tests/: conftest.py  run_e2e.py  test_e2e.py  test_integration.py  test_integrations.py  test_runtime.py  test_sdk.py
src/: json.rs  lib.rs
src/agent/: budget.rs  builder.rs  contract.rs  conversation.rs  coordinator.rs  hooks.rs  llm.rs  mod.rs  response.rs  runtime.rs
src/core/: cancel.rs  error.rs  hash.rs  log.rs  mod.rs  pool.rs  process.rs  retry.rs  time.rs  types.rs  uuid.rs
src/execution/: context.rs  dag.rs  engine.rs  mod.rs  replay.rs
src/observe/: mod.rs
tests/: integration.rs  validation.rs  wal_bench.rs
(+24 files in other folders)
