[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "durable-runtime"
version = "0.1.0"
description = "The SQLite of durable agent execution — crash-recoverable AI agents with exactly-once semantics"
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"
keywords = ["agent", "durable", "llm", "execution", "ai", "crash-recovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []  # Zero dependencies — pure stdlib

[project.optional-dependencies]
dev = ["pytest>=7.0"]
langchain = ["langgraph>=0.2.0"]
crewai = ["crewai>=0.80.0"]
adk = ["google-adk>=1.0.0"]
all = ["langgraph>=0.2.0", "crewai>=0.80.0", "google-adk>=1.0.0"]

[tool.setuptools.packages.find]
include = ["durable*"]

[project.scripts]
durable = "durable.cli.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.package-data]
"durable" = ["_bin/*", "py.typed"]
